--- a/src/Components/Model/Model.scss
+++ b/src/Components/Model/Model.scss
@@ -1,8 +1,7 @@
-
 .ModalArea {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(rgb(36,45,52, 0.8), rgb(36,45,52, 0.8));
+  background-image: linear-gradient(rgb(36, 45, 52, 0.8), rgb(36, 45, 52, 0.8));
   position: fixed;
   z-index: 999;
   display: grid;
@@ -19,10 +18,18 @@
 
     .ModalLeft {
       .ModalClose {
+        &:hover {
+          background-color: #6568686d;
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+        }
         cursor: pointer;
         svg {
           color: white;
           font-size: 20px;
+          transform: translate(5px, 5px);
         }
       }
     }
@@ -109,18 +116,16 @@
         }
 
         .subbutton {
-        margin: 80px 0px 5px 0px;
+          margin: 80px 0px 5px 0px;
           button {
             width: 100%;
             color: black;
             font-size: 20px;
             border-radius: 50px;
             border: 1px solid #6568686d;
-            background-color: #787A7A;
+            background-color: #787a7a;
             font-weight: 500;
             padding: 12px 10px;
-         
-            
           }
         }
       }
